# cis-haxball

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
haxball_site/: .env.example  gunicorn_config.py  manage.py
haxball_site/core/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
haxball_site/core/management/commands/: create_nicknames_history.py  set_dis_or_like_to_comm.py  set_dis_to_all.py  update_karma.py
haxball_site/core/templatetags/: user_tags.py
haxball_site/haxball_site/: context_processors.py  middleware.py  settings.py  urls.py
haxball_site/polls/: admin.py  apps.py  models.py  views.py
haxball_site/polls/templatetags/: polls_extras.py
haxball_site/reservation/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
haxball_site/reservation/templatetags/: reservation_extras.py
haxball_site/static/core/: core.css
haxball_site/static/core/include/: comments.css  sidebar_for_transfers.css
haxball_site/static/core/profile/: profile.css
haxball_site/static/reservation/css/: reservation_list.css
haxball_site/static/scripts/: LikeViewPopup.js  PostponementScripts.js  ProfileScripts.js
haxball_site/static/tournament/disqualification/: disqualifications_list.css
haxball_site/static/tournament/free_agent/: free_agent_list.css
haxball_site/static/tournament/teams/: team_page.css
haxball_site/templates/: alerts.html  base.html
haxball_site/templates/account/: email_confirm.html  login.html  signup.html  verification_sent.html
haxball_site/templates/core/: home.html
haxball_site/templates/reservation/: replays_list.html  reservation_form.html  reservation_list.html
haxball_site/templates/tournament/: hall_of_fame.html  team_all_time_rating.html  team_rating.html
haxball_site/tournament/: admin.py  apps.py  charts.py  forms.py  models.py  stats.py  urls.py  views.py
haxball_site/tournament/templatetags/: tournament_extras.py
requirements/: common.txt  dev.txt
(+91 files in other folders)
