[project]
name = "cis-haxball"
version = "0.1.0"
description = "Website for holding HaxBall tournaments with social component"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "backcall==0.2.0",
    "bleach==6.1.0",
    "certifi==2020.6.20",
    "chardet==3.0.4",
    "charset-normalizer==3.3.2",
    "colorama==0.4.3",
    "decorator==4.4.2",
    "defusedxml==0.6.0",
    "django-allauth==0.62.1",
    "django-autoslug==1.9.9",
    "django-ckeditor==6.7.1",
    "django-colorfield==0.3.2",
    "django-debug-toolbar==4.4.6",
    "django-extensions==3.2.3",
    "django-filter==24.2",
    "django-froala-editor==3.2.0",
    "django-grappelli==4.0.1",
    "django-htmx==1.19.0",
    "django-js-asset==2.2.0",
    "django-markdownx==3.0.1",
    "django-mathfilters==1.0.0",
    "django-model-utils==4.5.1",
    "django-online-users==0.3",
    "django-smart-selects==1.6.0",
    "django-summernote==0.8.20.0",
    "django-template-partials==24.4",
    "django-widget-tweaks==1.5.0",
    "django==4.2.13",
    "gunicorn==20.0.4",
    "idna==2.10",
    "ipython-genutils==0.2.0",
    "ipython==7.17.0",
    "jedi==0.17.2",
    "markdown==3.2.2",
    "numpy==2.0.2",
    "oauthlib==3.1.0",
    "pandas==2.2.3",
    "parso==0.7.1",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "pillow==10.4.0",
    "plotly==5.24.1",
    "prompt-toolkit==3.0.5",
    "psycopg2==2.9.10",
    "ptyprocess==0.6.0",
    "pygments==2.6.1",
    "python-decouple==3.8",
    "python-memcached==1.59",
    "python3-openid==3.2.0",
    "pytils==0.3",
    "pytz==2020.1",
    "requests-oauthlib==2.0.0",
    "requests==2.31.0",
    "setuptools==69.0.3",
    "six==1.16.0",
    "sorl-thumbnail==12.10.0",
    "sqlparse==0.3.1",
    "traitlets==4.3.3",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
]
